# Particle-Life

./: CMakeLists.txt  flake.nix  shell.nix
include/: Field.hpp  Particle.hpp  Particles.hpp  Rule.hpp  SpatialHashGrid.hpp  applyPhysics.hpp  colorButtonRGB.hpp  colorToStr.hpp  config.hpp  findDistance.hpp  imGuiApp.hpp  initParticles.hpp  particleLife.hpp
lib/imgui/: imconfig.h
lib/imgui-sfml/: imconfig-SFML.h  imgui-SFML.cpp
src/: Field.cpp  Particle.cpp  Particles.cpp  Rule.cpp  SpatialHashGrid.cpp  colorButtonRGB.cpp  colorToStr.cpp  config.cpp  findDistance.cpp  initParticles.cpp  main.cpp  particleLife.cpp
